Parcial05 (#2)
* feat: Parcial05 - Add reactive register form

* feat: Parcial05 - Add validators to reactive form

* feat: Parcial05 - Add custom validator

* feat: Parcial05 - Add input-error

* feat: Parcial05 - Add reusable text-input

* feat: Parcial05 - Add FormBuilder service

* feat: Parcial05 - Add form Steps

* feat: Parcial05 - Updater account register

* feat: Parcial05 - Add client side registration

* feat: Parcial05 - Add fix to photo upload

* feat: Parcial05 - Add pagination to BE

* feat: Parcial05 - Add pagination call to API from client

* feat: Parcial05 - Small cleanup

* feat: Parcial05 - Add paginator component

* feat: Parcial05 - Add page change

* feat: Pacial05 - Add signal to avoid paginator component reload

* feat: Pacial05 - Add filtering to API

* feat: Pacial05 - Add filtering to API

* feat: Pacial05 - Add more filtering to API

* feat: Pacial05 - Add filtering API call from SPA

* feat: Pacial05 - Add filter modal 1/2

* feat: Pacial05 - Add filter modal 2/2

* feat: Pacial05 - Add age gender filters to modal

* feat: Pacial05 - Add sorting to API

* feat: Parcial05 - Add action filter to log user activity

* feat: Parcial05 - Add  filter to SPA

* feat: Parcial05 - Add filter display message

* feat: Parcial05 - Add time ago pipe

* feat: Parcial05 - Add DateTime converter to AppDbContext

* feat: Parical05 - Add filters to local storage

* feat: Parical05 - Fix modal and restore cache

* feat: Parcial05 - Add likes entity

* feat: Parcial05 - Add Likes repository

* feat: Parcial05 - Fix Bruno tests

* feat: Parcial025 - Add Likes controller

* feat: Parcial025 - Add Likes controller

* feat: Parcial025 - Add Likes service

* feat: Parcial05 - Add Likes List feature

* feat: Parcial025 - Add Likes List feature

* feat: Parcial05 - Invalidate members cache

* feat: Parcial05 - Add likes pagination to API

* feat: Parcial05 - Add likes pagination to SPA
