# src/API/Controllers/MembersController.cs
@@ -3,6 +3,7 @@ using API.Interfaces;
 using API.Mappers;
 using API.Extensions;
 using API.DTOs;
+using API.Helpers;
 
 namespace API.Controllers;
 
@@ -11,9 +12,10 @@ public class MembersController(IMembersRepository membersRepository,
     IPhotoService photoService) : BaseApiController
 {
     [HttpGet]
-    public async Task<ActionResult<IReadOnlyList<Member>>> GetMembers()
+    public async Task<ActionResult<IReadOnlyList<Member>>> GetMembers([FromQuery] MemberRequest request)
     {
-        return Ok(await membersRepository.GetMembersAsync());
+        request.CurrentMemberId = User.GetMemberId();
+        return Ok(await membersRepository.GetMembersAsync(request));
     }
 
     [HttpGet("{id}")] // https://localhost:5001/api/members/bob-id
