# src/API/Data/MembersRepository.cs
@@ -1,6 +1,7 @@
 using API.Entities;
 using API.Interfaces;
 using Microsoft.EntityFrameworkCore;
+using API.Helpers;
 
 namespace API.Data;
 
@@ -20,11 +21,29 @@ public class MembersRepository(AppDbContext context) : IMembersRepository
     }
 
 
-    public async Task<IReadOnlyList<Member>> GetMembersAsync()
+    public async Task<PaginationResult<Member>> GetMembersAsync(MemberRequest request)
     {
-        return await context.Members
-            // .Include(m => m.Photos)
-            .ToListAsync();
+        var query = context.Members.AsQueryable();
+
+        query = query.Where(x => x.Id != request.CurrentMemberId);
+
+        if (!string.IsNullOrEmpty(request.Gender))
+        {
+            query = query.Where(x => x.Gender == request.Gender);
+        }
+
+        var minAgeDate = DateOnly.FromDateTime(DateTime.Today.AddYears(-request.MaxAge - 1));
+        var maxAgeDate = DateOnly.FromDateTime(DateTime.Today.AddYears(-request.MinAge));
+        query = query.Where(x => x.BirthDay >= minAgeDate && x.BirthDay <= maxAgeDate);
+
+        query = request.OrderBy switch
+        {
+            "created" => query.OrderByDescending(x => x.Created),
+            "lastActive" => query.OrderByDescending(x => x.LastActive),
+            _ => query.OrderByDescending(x => x.BirthDay)
+        };
+
+        return await Pagination.CreateAsync(query, request.PageNumber, request.PageSize);
     }
 
     public async Task<IReadOnlyList<Photo>> GetPhotosAsync(string memberId)
